Fix overlap problem

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+.main-container {
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+}
+
 /* reset.css */
 
 /* Box sizing rules */
