--- a/src/components/newcollections/NewCollections.css
+++ b/src/components/newcollections/NewCollections.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   align-items: center;
   gap: 10px;
-  height: 90vh;
 }
 
 .new-collections h1 {
