--- a/src/components/newsletter/Newsletter.css
+++ b/src/components/newsletter/Newsletter.css
@@ -1,6 +1,5 @@
 .newsletter {
   width: 100%;
-  height: 40vh;
   display: flex;
   flex-direction: column;
   align-items: center;
