--- a/src/components/popular/Popular.css
+++ b/src/components/popular/Popular.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   align-items: center;
   gap: 10px;
-  height: 80vh;
 }
 
 .popular h1 {
@@ -21,9 +20,12 @@
 }
 
 .popular-item {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-columns: 1fr;
   gap: 30px;
   width: 100%;
   margin: 0 auto;
-  margin-left: 2em;
+  margin-left: 3em;
+  margin-right: 3em;
 }
